Change user to only Email. And fixed job detail wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,7 @@ background-color: #a4e386;
   border-radius: 28px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 15px 20px;
+  word-wrap: break-word;
 }
 .newJob {
   margin-bottom: 10px;
